feat: implement horizontal scaling optimizations (Redis, ES Edge N-Gram, Auth Security)